<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/nav_dashboard" />

        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_orders"
            android:title="@string/nav_orders" />

        <item
            android:id="@+id/nav_menu"
            android:icon="@drawable/ic_menu_book"
            android:title="@string/nav_menu" />

        <item
            android:id="@+id/nav_payments"
            android:icon="@drawable/ic_payment"
            android:title="@string/nav_payments" />

    </group>

    <group>
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/nav_logout" />
    </group>

</menu>
